@@ -5,6 +5,7 @@
  */
 package de.dlr.proseo.ui.gui.service;
 
+import java.net.URI;
 import java.time.Duration;
 import java.util.HashMap;
 
@@ -18,6 +19,7 @@ import org.springframework.web.client.RestClientResponseException;
 import org.springframework.web.reactive.function.client.ClientResponse;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClient.Builder;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import de.dlr.proseo.logging.logger.ProseoLogger;
 import de.dlr.proseo.logging.messages.UIMessage;
@@ -34,7 +36,7 @@ import reactor.netty.http.client.HttpClient;
 /**
  * A bridge between the GUI frontend and the order management backend, providing methods to retrieve, manipulate, and update
  * order-related data and entities
- * 
+ *
  * @author Ernst Melchinger
  */
 @Service
@@ -53,7 +55,7 @@ public class OrderService {
 
 	/**
 	 * Retrieves a list of orders based on various search parameters
-	 * 
+	 *
 	 * @param identifier    the order identifier
 	 * @param states        the order state
 	 * @param products      the product
@@ -63,7 +65,7 @@ public class OrderService {
 	 * @param recordTo      the last result to return
 	 * @param sortCol       the column on which to base the sorting
 	 * @param up            true if the sorting should be ascending, false if it should be descending
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, and as well as methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, and as well as methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> get(String identifier, String states, String products, String startTimeFrom, String startTimeTo,
@@ -74,55 +76,41 @@ public class OrderService {
 		String mission = auth.getMission();
 
 		// Build the request URI
-		String uri = config.getOrderManager() + "/orders/select";
-		String divider = "?";
-		if (mission != null && !mission.isEmpty()) {
-			uri += divider + "mission=" + mission;
-			divider = "&";
+		UriComponentsBuilder uriBuilder = UriComponentsBuilder.fromUriString(config.getOrderManager()).path("/orders/select");
+
+		if (mission != null && !mission.isBlank()) {
+			uriBuilder.queryParam("mission", mission.trim());
 		}
-		if (identifier != null && !identifier.isEmpty()) {
-			uri += divider + "identifier=" + identifier.replaceAll("[*]", "%");
-			divider = "&";
+		if (identifier != null && !identifier.isBlank()) {
+			String identifierQueryParam = identifier.replaceAll("[*]", "%");
+			uriBuilder.queryParam("identifier", identifierQueryParam.trim());
 		}
-		if (states != null && !states.isEmpty()) {
-			String[] pcs = states.split(":");
-			for (String pc : pcs) {
-				uri += divider + "state=" + pc;
-				divider = "&";
-			}
+		if (states != null && !states.isBlank()) {
+			String[] statesQueryParam = states.split(":");
+			uriBuilder.queryParam("state", (Object[]) statesQueryParam);
 		}
-		if (products != null && !products.isEmpty()) {
-			String[] pcs = products.split(":");
-			for (String pc : pcs) {
-				uri += divider + "productClass=" + pc;
-				divider = "&";
-			}
+		if (products != null && !products.isBlank()) {
+			String[] productsQueryParam = products.split(":");
+			uriBuilder.queryParam("productClass", (Object[]) productsQueryParam);
 		}
-		if (startTimeFrom != null && !startTimeFrom.isEmpty()) {
-			uri += divider + "startTime=" + startTimeFrom;
-			divider = "&";
+		if (startTimeFrom != null && !startTimeFrom.isBlank()) {
+			uriBuilder.queryParam("startTime", startTimeFrom.trim());
 		}
-		if (startTimeTo != null && !startTimeTo.isEmpty()) {
-			uri += divider + "stopTime=" + startTimeTo;
-			divider = "&";
+		if (startTimeTo != null && !startTimeTo.isBlank()) {
+			uriBuilder.queryParam("stopTime", startTimeTo.trim());
 		}
 		if (recordFrom != null) {
-			uri += divider + "recordFrom=" + recordFrom;
-			divider = "&";
+			uriBuilder.queryParam("recordFrom", recordFrom);
 		}
 		if (recordTo != null) {
-			uri += divider + "recordTo=" + recordTo;
-			divider = "&";
+			uriBuilder.queryParam("recordTo", recordTo);
 		}
-		if (sortCol != null && !sortCol.isEmpty()) {
-			uri += divider + "orderBy=" + sortCol;
-			if (up != null && !up) {
-				uri += " DESC";
-			} else {
-				uri += " ASC";
-			}
-			divider = "&";
+		if (sortCol != null && !sortCol.isBlank()) {
+			String orderByQueryParam = sortCol + (up != null && up ? " ASC" : " DESC");
+			uriBuilder.queryParam("orderBy", orderByQueryParam);
 		}
+
+		URI uri = uriBuilder.build().toUri();
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
@@ -148,9 +136,9 @@ public class OrderService {
 
 	/**
 	 * Retrieves information about a specific order based on its ID
-	 * 
+	 *
 	 * @param orderId the order id
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, as well as methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, as well as methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> getId(String orderId) {
@@ -159,12 +147,11 @@ public class OrderService {
 		GUIAuthenticationToken auth = (GUIAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
 
 		// Build the request URI
-		String uri = config.getOrderManager() + "/orders";
-		if (null != orderId && !orderId.trim().isEmpty()) {
-			uri += "/" + orderId.trim();
-		} else {
-			uri += "/0";
-		}
+		URI uri = UriComponentsBuilder.fromUriString(config.getOrderManager())
+			.path("/orders")
+			.path("/" + (orderId != null && !orderId.isBlank() ? orderId.trim() : "0"))
+			.build()
+			.toUri();
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
@@ -190,12 +177,12 @@ public class OrderService {
 
 	/**
 	 * Retrieves the jobs associated with a specific order
-	 * 
+	 *
 	 * @param orderId    the order id
 	 * @param recordFrom the first result to return
 	 * @param recordTo   the last return to return
 	 * @param states     the permitted job states
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, and also methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, and also methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> getJobsOfOrder(String orderId, Long recordFrom, Long recordTo, String states) {
@@ -204,32 +191,24 @@ public class OrderService {
 		GUIAuthenticationToken auth = (GUIAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
 
 		// Build the request URI
-		String uri = config.getOrderManager() + "/orderjobs";
-		String divider = "?";
-		if (null != orderId && !orderId.trim().isEmpty()) {
-			uri += divider + "orderid=" + orderId.trim();
-			divider = "&";
+		UriComponentsBuilder uriBuilder = UriComponentsBuilder.fromUriString(config.getOrderManager()).path("/orderjobs");
+
+		if (orderId != null && !orderId.isBlank()) {
+			uriBuilder.queryParam("orderid", orderId);
 		}
 		if (recordFrom != null) {
-			uri += divider + "recordFrom=" + recordFrom;
-			divider = "&";
+			uriBuilder.queryParam("recordFrom", recordFrom);
 		}
 		if (recordTo != null) {
-			uri += divider + "recordTo=" + recordTo;
-			divider = "&";
+			uriBuilder.queryParam("recordTo", recordTo);
 		}
-		uri += divider + "logs=false";
-		divider = "&";
-		if (states != null && !states.isEmpty()) {
-			String[] pcs = states.split(":");
-			for (String pc : pcs) {
-				if (!pc.equalsIgnoreCase("ALL")) {
-					uri += divider + "state=" + pc;
-					divider = "&";
-				}
-			}
+		uriBuilder.queryParam("logs", "false");
+		if (states != null && !states.isBlank() && !states.toLowerCase().contains("all")) {
+			String[] statesQueryParam = states.split(":");
+			uriBuilder.queryParam("state", (Object[]) statesQueryParam);
 		}
-		uri += divider + "orderBy=startTime ASC";
+
+		URI uri = uriBuilder.build().toUri();
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
@@ -255,9 +234,9 @@ public class OrderService {
 
 	/**
 	 * Retrieves the graph of a specific job
-	 * 
+	 *
 	 * @param orderId the job id
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, and also methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, and also methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> getGraphOfJob(String orderId) {
@@ -266,10 +245,11 @@ public class OrderService {
 		GUIAuthenticationToken auth = (GUIAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
 
 		// Build the request URI
-		String uri = config.getProductionPlanner() + "/jobs/graph/";
-		if (null != orderId && !orderId.trim().isEmpty()) {
-			uri += orderId.trim();
-		}
+		URI uri = UriComponentsBuilder.fromUriString(config.getOrderManager())
+			.path("/jobs/graph")
+			.path("/" + (orderId != null && !orderId.isBlank() ? orderId.trim() : "0"))
+			.build()
+			.toUri();
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
@@ -295,9 +275,9 @@ public class OrderService {
 
 	/**
 	 * Retrieves the graph of a specific job
-	 * 
+	 *
 	 * @param jobId the job id
-	 * @param auth
+	 * @param auth the GUI authentication token
 	 * @return the job graph
 	 */
 	@SuppressWarnings("unchecked")
@@ -334,60 +314,32 @@ public class OrderService {
 
 	/**
 	 * Retrieves the state of a specific order
-	 * 
+	 *
 	 * @param orderId the order id
 	 * @return the order state in string format
+	 * @throws RestClientResponseException if the call to the order manager was unsuccessful
 	 */
-	@SuppressWarnings("unchecked")
-	public String getOrderState(String orderId) {
+	public String getOrderState(String orderId) throws RestClientResponseException, RuntimeException {
 
 		// Provide authentication
 		GUIAuthenticationToken auth = (GUIAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
 
-		// Build the request URI
-		String uri = "/orders";
-		if (null != orderId && !orderId.trim().isEmpty()) {
-			uri += "/" + orderId.trim();
-		} else {
-			uri += "/0";
-		}
-
-		HashMap<String, Object> result = null;
-		try {
-
-			// Attempt to retrieve the order state from the production planner
-			result = serviceConnection.getFromService(config.getOrderManager(), uri, HashMap.class, auth.getProseoName(),
-					auth.getPassword());
-
-		} catch (RestClientResponseException e) {
-
-			// Handle RestClientReponses
-			switch (e.getRawStatusCode()) {
-			case org.apache.http.HttpStatus.SC_NOT_FOUND:
-				logger.log(UIMessage.NO_MISSIONS_FOUND);
-				break;
-			case org.apache.http.HttpStatus.SC_UNAUTHORIZED:
-			case org.apache.http.HttpStatus.SC_FORBIDDEN:
-				logger.log(UIMessage.NOT_AUTHORIZED, "null", "null", "null");
-				break;
-			default:
-				logger.log(UIMessage.EXCEPTION, e.getMessage());
-			}
-
-		} catch (RuntimeException e) {
-			logger.log(UIMessage.EXCEPTION, e.getMessage());
-		}
-
-		return (String) result.get("orderState");
+		// Attempt to retrieve the order state from the production planner
+		return serviceConnection
+			.getFromService(config.getOrderManager(),
+					"/orders" + (orderId != null && !orderId.isBlank() ? "/" + orderId.trim() : "/0"), HashMap.class,
+					auth.getProseoName(), auth.getPassword())
+			.get("orderState")
+			.toString();
 	}
 
 	/**
 	 * Changes the state of an order based on its ID and the desired state
-	 * 
+	 *
 	 * @param orderId  the order id
 	 * @param state    the desired order state
 	 * @param facility the processing facility
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, as well as methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, as well as methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> setState(String orderId, String state, String facility) {
@@ -427,7 +379,7 @@ public class OrderService {
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
-		Builder webclient = WebClient.builder()
+		Builder webClientBuilder = WebClient.builder()
 			.clientConnector(new ReactorClientHttpConnector(HttpClient.create().followRedirect((req, res) -> {
 				logger.trace("response:{}", res.status());
 				return HttpResponseStatus.FOUND.equals(res.status());
@@ -437,6 +389,7 @@ public class OrderService {
 				.tcpConfiguration(client -> client.option(ChannelOption.CONNECT_TIMEOUT_MILLIS, config.getTimeout().intValue())
 					.doOnConnected(conn -> conn.addHandlerLast(new ReadTimeoutHandler((int) (config.getTimeout() / 1000)))
 						.addHandlerLast(new WriteTimeoutHandler((int) (config.getTimeout() / 1000)))))));
+		WebClient webClient = webClientBuilder.build();
 
 		logger.trace("Found authentication: " + auth);
 		logger.trace("... with username " + auth.getName());
@@ -445,24 +398,21 @@ public class OrderService {
 		// Build the Mono
 		Mono<ClientResponse> answer = null;
 		if (method.equals("patch")) {
-			answer = webclient.build()
-				.patch()
+			answer = webClient.patch()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
 				.exchange()
 				.timeout(Duration.ofMillis(config.getTimeout()));
 		} else if (method.equals("put")) {
-			answer = webclient.build()
-				.put()
+			answer = webClient.put()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
 				.exchange()
 				.timeout(Duration.ofMillis(config.getTimeout()));
 		} else if (method.equals("delete")) {
-			answer = webclient.build()
-				.delete()
+			answer = webClient.delete()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
@@ -477,10 +427,10 @@ public class OrderService {
 
 	/**
 	 * Changes the state of a job based on its ID and the desired state
-	 * 
+	 *
 	 * @param jobId the job id
 	 * @param state the desired state
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, as well as methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, as well as methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> setJobState(String jobId, String state) {
@@ -507,11 +457,12 @@ public class OrderService {
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
-		Builder webclient = WebClient.builder()
+		Builder webClientBuilder = WebClient.builder()
 			.clientConnector(new ReactorClientHttpConnector(HttpClient.create().followRedirect((req, res) -> {
 				logger.trace("response:{}", res.status());
 				return HttpResponseStatus.FOUND.equals(res.status());
 			})));
+		WebClient webClient = webClientBuilder.build();
 
 		logger.trace("Found authentication: " + auth);
 		logger.trace("... with username " + auth.getName());
@@ -520,22 +471,19 @@ public class OrderService {
 		// Build the Mono
 		Mono<ClientResponse> answer = null;
 		if (method.equals("patch")) {
-			answer = webclient.build()
-				.patch()
+			answer = webClient.patch()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
 				.exchange();
 		} else if (method.equals("put")) {
-			answer = webclient.build()
-				.put()
+			answer = webClient.put()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
 				.exchange();
 		} else if (method.equals("delete")) {
-			answer = webclient.build()
-				.delete()
+			answer = webClient.delete()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
@@ -549,10 +497,10 @@ public class OrderService {
 
 	/**
 	 * Changes the state of a job step based on its ID and the desired state
-	 * 
+	 *
 	 * @param jobStepId the job step state
 	 * @param state     the state to set
-	 * @return a Mono\<ClientResponse\> providing access to the response status and headers, as well as methods to consume the
+	 * @return a Mono&lt;ClientResponse&gt; providing access to the response status and headers, as well as methods to consume the
 	 *         response body
 	 */
 	public Mono<ClientResponse> setJobStepState(String jobStepId, String state) {
@@ -579,11 +527,12 @@ public class OrderService {
 		logger.trace("URI " + uri);
 
 		// Create and configure a WebClient to make a HTTP request to the URI
-		Builder webclient = WebClient.builder()
+		Builder webClientBuilder = WebClient.builder()
 			.clientConnector(new ReactorClientHttpConnector(HttpClient.create().followRedirect((req, res) -> {
 				logger.trace("response:{}", res.status());
 				return HttpResponseStatus.FOUND.equals(res.status());
 			})));
+		WebClient webClient = webClientBuilder.build();
 
 		logger.trace("Found authentication: " + auth);
 		logger.trace("... with username " + auth.getName());
@@ -592,22 +541,19 @@ public class OrderService {
 		// Build the Mono
 		Mono<ClientResponse> answer = null;
 		if (method.equals("patch")) {
-			answer = webclient.build()
-				.patch()
+			answer = webClient.patch()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
 				.exchange();
 		} else if (method.equals("put")) {
-			answer = webclient.build()
-				.put()
+			answer = webClient.put()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
 				.exchange();
 		} else if (method.equals("delete")) {
-			answer = webclient.build()
-				.delete()
+			answer = webClient.delete()
 				.uri(uri)
 				.headers(headers -> headers.setBasicAuth(auth.getProseoName(), auth.getPassword()))
 				.accept(MediaType.APPLICATION_JSON)
